Post after conversion and review.

--- a/mss.bib
+++ b/mss.bib
@@ -455,3 +455,115 @@
     institution = {Runtime Verification},
     urldate = {2024-03-07}
 }
+
+@online{Paprocki2021,
+    author = {Jonathan Paprocki \patp{datnut-pollen}},
+    usera = "\patp{datnut-pollen}",
+    title = "The Gang Solves the Gas Crisis",
+    year = 2021,
+    month = 5,
+    day = 13,
+    url = "https://urbit.org/blog/rollups",
+    institution = "Tlon Corporation",
+}
+
+@online{ERC721,
+    author = {William Entriken and Dieter Shirley and Jacob Evans and Nastassia Sachs},
+    title = "\textsc{erc}-721: Non-Fungible Token Standard",
+    year = 2018,
+    url = "https://eips.ethereum.org/EIPS/eip-721",
+    urldate = {2024-03-07},
+    institution = {Ethereum Foundation},
+}
+
+% https://urbit.org/blog/azimuth-is-on-chain
+@online{WolfePaul2019,
+    author = {Galen Wolfe-Pauly \patp{ravmel-ropdyl}},
+    usera = "\patp{ravmel-ropdyl}",
+    title = "Azimuth is On-Chain",
+    year = 2019,
+    month = 1,
+    day = 13,
+    url = "https://urbit.org/blog/azimuth-is-on-chain",
+    institution = "Tlon Corporation",
+}
+
+@online{W3C2022,
+    author = {{World Wide Web Consortium}},
+    title = "Decentralized Identifiers (\textsc{did}) v1.0:  Core architecture, data model, and representations",
+    year = 2022,
+    url = "https://www.w3.org/TR/did-core/",
+    urldate = {2024-03-07},
+    institution = "World Wide Web Consortium",
+}
+
+@online{Allen2016,
+    author = {Christopher Allen},
+    title = "The Path to Self-Sovereign Identity",
+    year = 2016,
+    month = 4,
+    day = 26,
+    url = "https://www.lifewithalacrity.com/article/the-path-to-self-soverereign-identity/",
+    urldate = {2024-03-07},
+}
+
+@online{Sarlev2024,
+    author = {Stuart Cristoph \patp{sarlev-sarsen}},
+    usera = "\patp{sarlev-sarsen}",
+    title = "Why \texttt{\#l1masterrace} is More Than a Meme",
+    year = 2024,
+    month = 1,
+    day = 15,
+    url = "https://sarlev-sarsen.rooftopdao.io/blog/why-l1masterrace-is-more-than-a-meme",
+    institution = {{RooftopDAO}},
+}
+
+@online{CosmosTVL,
+    author = {Owen Fernau},
+    title = "Cosmos Ecosystem Quietly Surges to \$17B in \textsc{tvl} in Challenge to Ethereum Layer 2s",
+    year = 2022,
+    month = 2,
+    day = 18,
+    url = "https://thedefiant.io/news/markets/cosmos-tvl-surge-ethereum",
+    institution = "The Defiant",
+}
+
+@online{EIP6551,
+    author = {Jayden Windle and Benny Giang and Steve Jang and Druzy Downs and Raymond Huynh and Alanah Lam and Wilkins Chung and Paul Sullivan and Auryn Macmillan and Jan-Felix Schwarz and Anton Bukov and Mikhail Melnik and Josh Weintraub and Rob Montgomery and vectorized and Víctor Martínez and Adrián Pajares},
+    title = "\textsc{erc}-6551:  Non-fungible Token Bound Accounts",
+    year = 2023,
+    month = 2,
+    day = 23,
+    url = "https://eips.ethereum.org/EIPS/eip-6551",
+    urldate = {2024-03-07},
+    institution = "Ethereum Foundation",
+}
+
+@online{Zorp2023,
+      author = {Logan Allen \patp{tacryp-socryt} and Brian Klatt and Philip Quirk and Yaseen Shaikh},
+      title = {\textsc{eden} - a practical, \textsc{snark}-friendly combinator {VM} and \textsc{isa}},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2023/1021},
+      year = {2023},
+      month = 7,
+      day = 3,
+      url = {https://eprint.iacr.org/2023/1021}
+}
+
+@online{W3C2022a,
+    author = {{World Wide Web Consortium}},
+    title = "Verifiable Credentials Data Model 1.1",
+    year = 2022,
+    month = 3,
+    date = 3,
+    url = "https://www.w3.org/TR/vc-data-model/",
+    urldate = {2024-03-07},
+    institution = "World Wide Web Consortium",
+}
+
+@book{Preukschat2021,
+    author = {Alex Preukschat and Drummond Reed},
+    title = "Self-Sovereign Identity:  Decentralized digital identity and verifiable credentials",
+    year = 2021,
+    publisher = "Manning Publications",
+    isbn = "9781617296598",
+}
