--- a/mss.bib
+++ b/mss.bib
@@ -567,3 +567,11 @@
     publisher = "Manning Publications",
     isbn = "9781617296598",
 }
+
+@online{UrbitPrecepts,
+author = "Philip C. Monk \patp{wicdev-wisryt}",
+title = "Urbit Precepts (Discussion)",
+year = 2020,
+url = "https://urbit.org/blog/precepts-discussion",
+urldate = {2024-03-10}
+}
