--- a/mss.tex
+++ b/mss.tex
@@ -179,7 +179,7 @@ How does Urbit continue to improve the utility of Azimuth? While in 2019 the opt
 
 The most `philosophically straightforward' answer would be for Urbit to self-host its \textsc{pki}. While this requires further technical development, it is conceptually tractable and the \lstinline[style=inlinecode]{%chain} project, primarily executed by \patp{tiller-tolbus} and \patp{midsum-salrux} as a skunkworks effort, has shown initial successes on an Urbit-native blockchain. This option could make use of identity-backed consensus models, and would be the most direct pathway to the Urbit network not having to pay a `tax' to another network for its consensus mechanism. In a sense, this is the most `independent' or `self-contained' option. However, it would likely result in decreased capital access and practical legibility to external networks.
 
-While reasonable minds may differ on the net benefit of Urbit's proximity to the Ethereum network's capital pools, there is no doubt that such proximity has had material impacts on address space valuation. This includes the \textasciitilde\$33k peak for star-level identities. Distancing Urbit ID from Ethereum by moving the \textsc{pki} to a self-hosted network would limit the opportunity to access this capital by increasing the barriers to exchange.
+While reasonable minds may differ on the net benefit of Urbit's proximity to the Ethereum network's capital pools, there is no doubt that such proximity has had material impacts on address space valuation. This includes the \textasciitilde\$33K peak for star-level identities. Distancing Urbit ID from Ethereum by moving the \textsc{pki} to a self-hosted network would limit the opportunity to access this capital by increasing the barriers to exchange.
 
 Moving the \textsc{pki} in this way would also decrease interoperability and extensibility by making it harder for the Ethereum network to access and validate data about ownership of Urbit IDs. Technically speaking, this constraint could be reduced by self-hosted \textsc{rpc} endpoints of \lstinline[style=inlinecode]{%chain} or Azimuth state that could be accessed over \textsc{http}. However, the more prominent issue would be the coordination constraint it would generate. If the \textsc{pki} moves, what motivation do members of the Ethereum Network have to bother with Urbit \textsc{rpc} endpoints instead of just staying within the Ethereum tooling ecosystem?
 
