--- a/mss.bib
+++ b/mss.bib
@@ -472,7 +472,7 @@
     title = "\textsc{erc}-721: Non-Fungible Token Standard",
     year = 2018,
     url = "https://eips.ethereum.org/EIPS/eip-721",
-    urldate = {2024-03-07},
+    urldate = {2024-08-29},
     institution = {Ethereum Foundation},
 }
 
@@ -493,7 +493,7 @@
     title = "Decentralized Identifiers (\textsc{did}) v1.0:  Core architecture, data model, and representations",
     year = 2022,
     url = "https://www.w3.org/TR/did-core/",
-    urldate = {2024-03-07},
+    urldate = {2024-08-29},
     institution = "World Wide Web Consortium",
 }
 
@@ -504,7 +504,7 @@
     month = 4,
     day = 26,
     url = "https://www.lifewithalacrity.com/article/the-path-to-self-soverereign-identity/",
-    urldate = {2024-03-07},
+    urldate = {2024-08-29},
 }
 
 @online{Sarlev2024,
@@ -535,7 +535,7 @@
     month = 2,
     day = 23,
     url = "https://eips.ethereum.org/EIPS/eip-6551",
-    urldate = {2024-03-07},
+    urldate = {2024-08-29},
     institution = "Ethereum Foundation",
 }
 
@@ -556,7 +556,7 @@
     month = 3,
     date = 3,
     url = "https://www.w3.org/TR/vc-data-model/",
-    urldate = {2024-03-07},
+    urldate = {2024-08-29},
     institution = "World Wide Web Consortium",
 }
 
@@ -569,9 +569,29 @@
 }
 
 @online{UrbitPrecepts,
-author = "Philip C. Monk \patp{wicdev-wisryt}",
-title = "Urbit Precepts (Discussion)",
-year = 2020,
-url = "https://urbit.org/blog/precepts-discussion",
-urldate = {2024-03-10}
+    author = "Philip C. Monk \patp{wicdev-wisryt}",
+    title = "Urbit Precepts (Discussion)",
+    year = 2020,
+    url = "https://urbit.org/blog/precepts-discussion",
+    urldate = {2024-08-29}
+}
+
+% https://docs.ordinals.com/
+@online{Ordinals,
+    author = "Ordinals",
+    title = "Ordinals Handbook",
+    year = 2024,
+    url = "https://docs.ordinals.com/",
+    urldate = {2024-08-29}
+}
+
+@online{Hamilton2024,
+    author = "Liam Fitzgerald \patp{hastuc-dibtux} and Theodore Blackman \patp{rovnys-ricfer} and Jacob Hamilton \patp{tondes-sitrym} and Seth Feibus \patp{doplyr-harbur}",
+    usera = "\patp{tondes-sitrym}",
+    title = "{GroundWire} 01",
+    year = 2024,
+    month = 8,
+    day = 22,
+    url = "https://straylight.network/groundwire/groundwire-01",
+    urldate = {2024-08-29}
 }
